kubemanifest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: app
  template:
    spec:
      containers:
      - name: app
        image: app
        livenessProbe:
          httpGet:
            path: /
            port: 2022
          initialDelaySeconds: 60
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 2022
          initialDelaySeconds: 60
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 10
        ports:
        - containerPort: 2022
