kubemanifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: app
