kubemanifest/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
    - host: contoh.com
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: svc
                port: 
                  number: 8080
